kubernetes/apps/default/obsidian/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian
  labels:
    app: obsidian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian
  template:
    metadata:
      labels:
        app: obsidian
    spec:
      containers:
        - name: obsidian
          image: linuxserver/obsidian:1.10.3
          ports:
            - containerPort: 3000
