kubernetes/apps/default/obsidian/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
spec:
  type: ClusterIP
  selector:
    app: obsidian
  ports:
    - port: 3000
      targetPort: 3000
